# Wavelock

./: .dockerignore  .gitignore  CHANGELOG.md  DISCUSSIONS.md  Dockerfile  PATENT_NOTICE.md  README.md  RUNBOOK.md  SURVIVABILITY.md  WELCOME_DISCUSSION.md  hello_wavelock.py  patch_verify.py  plot_results.py  pyproject.toml  pytest.ini  soliton.py  wavelock_full_battery.py  wct_bench.py
attacks/: WAVELOCK_MYTHOS_BREAK_REPORT.md  WAVELOCK_OTS_REDTEAM.md  WAVELOCK_THEORY_BREAK_AUDIT.md  forge_from_snapshot.py  ots_block_body_unbound.py  ots_key_substitution.py  ots_ledger_concurrent_double_accept.py  ots_ledger_reconstruction_failopen.py  ots_reuse_to_total_forgery.py  ots_signature_malleability.py  seed_bruteforce.py
audit/: .gitignore  BOUNTY_SCOPE.md  HARDENING_RECOMMENDATIONS.md  PASS_FAIL.md  README.md  REPORT.md  _wl.py  a1_attractor_entropy.py  a2_jacobian.py  a3_second_preimage.py  a4_seedspace.py  a5_serialization.py  a6_determinism.py  a7_distinguishability.py  a8_surrogate.py  a9_parameters.py  run_all.sh
chain/: Block.py  CurvaChain.py  UserRegistry.py  WaveLock.py  artifacts.py  chain_utils.py  cli.py  kernel_decl.py  pov.py
curvature_audit/: README.md  __init__.py  _common.py  accumulator_algebraic_attacks.py  accumulator_comparison.py  candidate_a_vs_b.py  candidate_b_algebraic_solver.py  candidate_b_full_family.py  candidate_b_reduced_joint_map.py  candidate_b_shortcuts.py  candidate_b_singular_hyperplane.py  conftest.py  curvature_metrics.py  eigenmode_attacks.py  path_collision.py  phase_cc1_family.py  pytest.ini  reduced_exhaustive_cc1.py  reduced_models.py  resource_bounds.py  run_audit.py  scaling.py  shortcut_computation.py  test_candidate_a_frozen.py  test_candidate_b.py  test_cc3_reachability.py  test_parity.py  (+9 more)
(+260 files in other folders)
